--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>Arxiv for Speech Separation</title>
+    <title>Arxiv for Thame</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -32,7 +32,7 @@
             <div class="wrap-table100">
                 <div class="table100">
                     <div class="container pb-3" style="max-width: 1570px;">
-                        <p><kbd>Arxiv Speech Separation - Datetime</kbd></p>
+                        <p><kbd>Arxiv Thame - Datetime</kbd></p>
                         <p><kbd>&copy 2020 Copyright: <a href="www.likai.show">Kai Li</a></kbd></p>
                         <p><kbd><span id="busuanzi_value_page_pv"></span> visit this page</kbd></p>
                     </div>
